[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "trf2gff"
authors = [{ name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }]

description = "Convert Tandem Repeat Finder dat file output into gff3 format."
readme = "README.md"
requires-python = ">=3.7"
license = { text = "MIT" }

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

dynamic = ["version", "dependencies"]

[tool.setuptools_scm]
write_to = "src/trf2gff/_version.py"

[tool.setuptools.dynamic]
#version = {attr = "trf2gff.__version__"}
dependencies = { file = "requirements.txt" }

[project.urls]
homepage = "https://github.com/adamtaranto/TRF2GFF"
documentation = "https://github.com/adamtaranto/TRF2GFF"
repository = "https://github.com/adamtaranto/TRF2GFF"

[project.scripts]
trf2gff = "trf2gff.app:main"


# Create and push tags
# git tag -a v0.0.4 
# git push origin v0.0.4

# Check what setuptools_scm thinks the current version is and create _version.py
#git describe
#python -m setuptools_scm
#python setup.py --version

# Build
#python3 -m pip install --upgrade build && python3 -m build
