[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trf2gff"
authors = [{ name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }]
description = "Convert Tandem Repeat Finder dat file output into gff3 format."
license = { text = "GPL" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = []
dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
homepage = "https://github.com/adamtaranto/TRF2GFF"
documentation = "https://github.com/adamtaranto/TRF2GFF"
repository = "https://github.com/adamtaranto/TRF2GFF"

[project.scripts]
trf2gff = "trf2gff.app:main"

[tool.hatch.build]
source = "src"

exclude = [
    "environment.yml",
    ".gitpod.Dockerfile",
    ".gitpod.yml",    
    ".devcontainer/**",
    ".dockerignore",
    ".vscode",
]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"  # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/trf2gff/_version.py"