[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "trf2gff"
authors = [{ name = "Adam Taranto", email = "adam.p.taranto@gmail.com" }]
description = "Convert Tandem Repeat Finder dat file output into gff3 format."
license = { text = "GPL" }
readme = "README.md"
requires-python = ">=3.8"

dependencies = []

dynamic = ["version"]

classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]


# Optional dependencies for testing
[project.optional-dependencies]
dev = [
    "hatch",
    "ipykernel",
    "isort",
    "numpydoc-validation",
    "pre-commit",
    "pytest-cov",
    "pytest",
    "ruff",
]

[project.urls]
homepage = "https://github.com/adamtaranto/TRF2GFF"
documentation = "https://github.com/adamtaranto/TRF2GFF"
repository = "https://github.com/adamtaranto/TRF2GFF"

[project.scripts]
trf2gff = "trf2gff.app:main"

[tool.hatch.build]
source = "src"

exclude = ["environment.yml", ".vscode"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.vcs]
tag-pattern = "v*"         # Git tags starting with 'v' will be used for versioning
fallback-version = "0.0.0"

[tool.hatch.build.hooks.vcs]
version-file = "src/trf2gff/_version.py"

[tool.pytest.ini_options]
addopts = "-v --cov=teloclip --cov-branch --cov-report=xml --cov-report=term"
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py310"
line-length = 88
fix = true

[tool.ruff.lint]
select = [
    "C", # mccabe rules
    "F", # pyflakes rules
    "E", # pycodestyle error rules
    "W", # pycodestyle warning rules
    "B", # flake8-bugbear rules
    "I", # isort rules
]
ignore = [
    "C901", # max-complexity-10
    "E501", # line-too-long
    "I001", # isort-imports
    "B905", # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.format]
indent-style = "space"
quote-style = "single"

[tool.isort]
profile = "black"
known_third_party = []
known_first_party = ["trf2gff"]
default_section = "THIRDPARTY"
force_sort_within_sections = true

[tool.numpydoc_validation]
checks = [
    "all",  # report on all checks
    "ES01", # but don't require an extended summary
    "EX01", # or examples
    "SA01", # or a see also section
    "SS06", # and don't require the summary to fit on one line
]
exclude = [ # don't report on checks for these
    '\.__init__$',
    '\.__repr__$',
    '\.__str__$',
]
override_SS05 = [ # allow docstrings to start with these words
    '^Process ',
    '^Assess ',
    '^Access ',
]
